# regal

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build_linux_musl.sh
migrations/2020-02-08-210925_create_images/: up.sql
migrations/2020-02-08-211842_create_galleries/: down.sql  up.sql
migrations/2020-02-08-221110_create_tags/: down.sql  up.sql
migrations/2020-03-05-094804_rename_image_to_picture/: down.sql  up.sql
migrations/2020-03-05-121129_add_thumbs/: down.sql  up.sql
migrations/2020-03-12-180452_add_users/: up.sql
src/: clap.yml  config.rs  main.rs  testing.rs
src/auth/: mod.rs
src/database/: mod.rs  schema.rs
src/database/model/: gallery.rs  mod.rs  picture.rs  tag.rs  thumb.rs  user.rs
src/database/provider/: gallery.rs  mod.rs  picture.rs  tag.rs  thumb.rs  user.rs
src/disk/: mod.rs
src/net/: auth.rs  gallery.rs  mod.rs  picture.rs
src/net/web/: gallery.rs  mod.rs  picture.rs
src/scan/: mod.rs
src/thumb/: background.rs  mod.rs
templates/: index.html
templates/web/: frame.html  gallery.html  gallery_new.html  index.html  login.html  picture.html
web/css/: regal.css
web/js/: regal.js
