[package]
name = "regal"
version = "0.2.0"
authors = ["Stephan Goeppentin <dedda102@gmail.com>"]
edition = "2018"
description = "regal image gallery for web"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.8.0", features = ["with-rocket"] }
clap = { version = "2.33", features = ["yaml"]}
colored = "1.9"
ctrlc = "3.1"
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dirs = "2.0"
dotenv = "0.15"
image = "0.23"
lazy_static = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.12"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json", "serve"] }
rsgen = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha = "1.0"
signal-hook = "0.1"
uuid = { version = "0.8.1", features = ["v4"] }

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
regal = { path = "/usr/bin/regal" }
